# pwxlib

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  Doxyfile  INSTALL  INSTALL.md  LICENSE  Makefile  Makefile.pwx  NEWS.md  README  README.md  TODO.md  configure  meson.build  meson_options.txt  pwxCnfFile.cbp  pwxLib.workspace
cb/: hash_builder.cbp  libpwx.cbp  pwxLib.cbp  pwxLib_JBOH.cbp  rebuild_all.sh  testlib.cbp  torture.cbp
doc/: CMakeLists.txt  doxfooter.html  doxstyle.css  doxyfile.in  meson.build
meson/: find_source.sh  link_test.cpp
pwxLib/: CCnfFileHandler.h  CMemRingFactory.h  CSinCosTables.h
pwxLib_JBOH/: AUTHORS  ChangeLog  Doxyfile  Makefile  README  TODO  pwxArgs.cbp  pwxLib.cbp  pwxLib.workspace  pwxMemRing.cbp  pwxRandom.cbp  pwxSinCosTables.cbp  (+1 more)
src/: CMakeLists.txt  PAH  PAllocUtils  PArgHandler  PBasic  PChainHash  PContainers  PDoubleList  PDoubleRing  PException  PLockGuard  PLockable  PLog  PMath  PMemUtils  POpenHash  PQueue  PRandom  PSet  PSinCos  PSingleList  PSingleRing  PStack  PStreamHelpers  PStringUtils  PTools  PUtils  PWXLib  PWXlib  PWaveColor  PWorkers  RNG  SCT  meson.build  pwx.h  pwx_config.h.in  pwxlib.cpp  pwxlib.h  pwxlib.pc.in
src/arg_handler/: CArgCallback.cpp  CArgCallback.h  CArgHandler.cpp  CArgHandler.h  CMakeLists.txt  PArgHandler  TArgTarget.cpp  TArgTarget.h  VArgTargetBase.cpp  VArgTargetBase.h  eArgErrorNumber.h  eArgSetType.h  eArgTargetType.h  eArgType.h  meson.build  pwxCArgCallback.h  pwxCArgHandler.h  pwxTArgTarget.h  pwxVArgTargetBase.h  pwx_eArgErrorNumber.h  pwx_eArgSetType.h  pwx_eArgTargetType.h  pwx_sArgError.h  sArgError.cpp  sArgError.h
src/basic/: CException.cpp  CException.h  CLockGuard.cpp  CLockGuard.h  CLockable.cpp  CLockable.h  CMakeLists.txt  PException  PLockGuard  PLockable  StreamHelpers.cpp  StreamHelpers.h  _mem_map.cpp  _mem_map.h  _mem_wrapper.h  alloc_utils.h  compiler.h  debug.cpp  debug.h  macros.h  mem_utils.cpp  mem_utils.h  meson.build  pwxCException.h  pwxCLockGuard.h  pwxCLockable.h  pwx_compiler.h  pwx_debug.h  pwx_macros.h  pwx_templates.h  pwx_trace_info.h  pwx_types.h  string_utils.cpp  string_utils.h  templates.h  trace_info.cpp  trace_info.h  types.h
src/container/: CHashBuilder.cpp  CHashBuilder.h  CMakeLists.txt  CThreadElementStore.cpp  CThreadElementStore.h  PChainHash  PDoubleList  PDoubleRing  POpenHash  PQueue  PSet  PSingleList  PSingleRing  PStack  TChainHash.h  TDoubleElement.h  TDoubleList.h  TDoubleRing.h  THashElement.h  TOpenHash.h  TQueue.h  TSet.h  TSingleElement.h  TSingleList.h  TSingleRing.h  TStack.h  TVarDeleter.h  VContainer.cpp  VContainer.h  VElement.cpp  VElement.h  VTHashBase.h  XXYcauJH  meson.build  pwxCHashBuilder.h  pwxCThreadElementStore.h  pwxTChainHash.h  pwxTDoubleElement.h  pwxTDoubleList.h  pwxTDoubleRing.h  (+12 more)
src/functions/: CMakeLists.txt  meson.build  pwx_set_func.h  pwx_set_fwd.h  set_func.h  set_fwd.h
src/libpwx/: CMakeLists.txt  PAH  PBasic  PContainers  PTools  PUtils  PWXlib  PWorkers  RNG  SCT  basic.h  containers.h  finish.cpp  finish.h  init.cpp  init.h  libpwx.pc.in  libpwx.sym  meson.build  pwx.cpp  pwx.h  pwx_basic.h  pwx_containers.h  pwx_helpers.h  pwx_tools.h  pwx_utils.h  pwx_worker_PAH.cpp  pwx_worker_PAH.h  pwx_worker_RNG.cpp  pwx_worker_RNG.h  pwx_worker_SCT.cpp  pwx_worker_SCT.h  pwx_workers.cpp  pwx_workers.h  pwxlib.h  pwxlib.pc.in  pwxlib.sym  tools.h  utils.h  worker_PAH.cpp  (+6 more)
src/log/: CMakeLists.txt  _log_msg_id.cpp  _log_msg_id.h  _log_queue.cpp  _log_queue.h  _log_thread.h  log.cpp  log.h  log_level.h
src/math_helpers/: CMakeLists.txt  CSinCosTable.cpp  CSinCosTable.h  MathHelpers.cpp  MathHelpers.h  PMath  PSinCos  meson.build  pwxCSinCosTable.h  pwxMathHelpers.h
src/pwx/: container.h  general.h  tools.h  types.h  worker.h
src/pwx/base/: VArgTargetBase.cpp  VArgTargetBase.h  VContainer.cpp  VContainer.h  VElement.cpp  VElement.h  VTHashBase.h
src/pwx/container/: TChainHash.h  TContStateList.h  TDoubleList.h  TDoubleRing.h  TOpenHash.h  TQueue.h  TSet.h  TSingleList.h  TSingleRing.h  TStack.h
src/pwx/functions/: debug.cpp  debug.h  set_func.h  set_fwd.h
src/pwx/general/: compiler.h  macros.h  templates.h
src/pwx/internal/: CRandomConstants.h  CRandomTHash.cpp  CRandomTHash.h  CRandomTRandom.h  CRandomWordConstants.h  CThreadElementStore.cpp  CThreadElementStore.h  TThreadElementStore.h
src/pwx/tools/: MathHelpers.cpp  MathHelpers.h  StreamHelpers.cpp  StreamHelpers.h
src/pwx/types/: CArgCallback.cpp  CArgCallback.h  CException.cpp  CException.h  CHashBuilder.cpp  CHashBuilder.h  CLockGuard.cpp  CLockGuard.h  CLockable.cpp  CLockable.h  CWaveColor.cpp  CWaveColor.h  TArgTarget.cpp  TArgTarget.h  TContState.h  TDoubleElement.h  THashElement.h  TLockGuards.h  TSingleElement.h  TVarDeleter.h  eArgErrorNumber.h  eArgSetType.h  eNameSourceType.cpp  eNameSourceType.h  sArgError.cpp  sArgError.h
src/pwx/worker/: CArgHandler.cpp  CArgHandler.h  CRandom.cpp  CRandom.h  CSinCosTable.cpp  CSinCosTable.h
src/random/: CMakeLists.txt  CRandom.cpp  CRandom.h  CRandomConstants.h  CRandomTHash.cpp  CRandomTHash.h  CRandomTRandom.cpp  CRandomTRandom.h  CRandomWordConstants.h  PRandom  eNameSourceType.cpp  eNameSourceType.h  meson.build  pwxCRandom.h  pwx_eNameSourceType.h
src/stream_helpers/: CMakeLists.txt  PStreamHelpers  StreamHelpers.cpp  StreamHelpers.h  meson.build  pwxStreamHelpers.h
src/wavecolor/: CMakeLists.txt  CWaveColor.cpp  CWaveColor.h  PWaveColor  meson.build  pwxCWaveColor.h
test/: CMakeLists.txt  Makefile  cluster_check.cpp  cluster_check.h  destroy.cpp  destroy.h  env.h  generate-sym-test.py  hash_builder.cpp  hash_builder.h  main.cpp  main.h  meson.build  namegen.cpp  testArgs.cpp  testBuckets.h  testColor.cpp  testColor.h  testHash.h  testListRing.h  testLists.cpp  testLists.h  testMath.cbp  testMemRing.cpp  testPAH.cpp  testPAH.h  testRNG.cpp  testRNG.h  testRNG_func.cpp  testRNG_func.h  testRandom.cpp  testSCT.cpp  testSCT.h  testSet.h  testSinCosTables.cpp  testSpeed.h  testStackQueue.h  testThreads.h  test_basic_CException.cpp  test_basic_CLockGuard.cpp  (+8 more)
(+54 files in other folders)
